--- a/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
+++ b/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
@@ -4,7 +4,7 @@
              xmlns:vm="clr-namespace:StabilometricApp.ViewModels"
              xmlns:conv="clr-namespace:StabilometricApp.ValueConverters"
              x:Class="StabilometricApp.Views.RecordingPage"
-             Title="{Binding Title}"
+             Title="Recorder"
              >
 
     <ContentPage.Resources>
@@ -16,15 +16,32 @@
     </ContentPage.BindingContext>
     
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical">
-            <Grid HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                <Button HorizontalOptions="Center"
-                        VerticalOptions="Center"
+        <StackLayout Orientation="Vertical" Margin="10">
+            <Label HorizontalOptions="Start"
+                   FontSize="Default"
+                   Text="Track name" />
+            <Editor HorizontalOptions="Fill"
+                    Text="{Binding Path=TrackName}"
+                    Margin="0,0,0,8"
+                    />
+            <Label HorizontalOptions="Start"
+                   FontSize="Default"
+                   Text="Height (cm)"
+                   />
+            <Editor HorizontalOptions="Start"
+                    WidthRequest="100"
+                    Keyboard="Numeric"
+                    Text="{Binding Path=Height}"
+                    Margin="0,0,0,8"
+                    />
+            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <Button HorizontalOptions="Fill"
+                        VerticalOptions="Fill"
                         Text="Record"
                         IsVisible="{Binding Path=IsRecording, Converter={StaticResource InvertBooleanConverter}}"
                         Command="{Binding Path=StartRecording}"
                         />
-                <Label HorizontalOptions="Center"
+                <Label HorizontalOptions="Fill"
                        VerticalOptions="Center"
                        FontSize="120"
                        FontAttributes="Bold"
