--- a/src/StabilometricApp/StabilometricApp/AppShell.xaml
+++ b/src/StabilometricApp/StabilometricApp/AppShell.xaml
@@ -2,10 +2,6 @@
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
        xmlns:local="clr-namespace:StabilometricApp.Views"
-       xmlns:conv="clr-namespace:StabilometricApp.ValueConverters"
-       RouteHost="companyname.com"
-       RouteScheme="app"
-       Route="StabilometricApp"
        FlyoutBehavior="Disabled"
        Title="Stabilometric Data Collector"
        x:Class="StabilometricApp.AppShell">
@@ -48,33 +44,12 @@
         - David Ortinau, Senior Program Manager for Mobile Dev Tools [david.ortinau@microsoft.com]
     -->
 
-    <!-- 
-        Styles and Resources 
-    -->
-    <Shell.Resources>
-        <ResourceDictionary>
-            <Color x:Key="NavigationPrimary">#2196F3</Color>
-            <Style x:Key="BaseStyle" TargetType="Element">
-                <Setter Property="Shell.ShellBackgroundColor" Value="{StaticResource NavigationPrimary}" />
-                <Setter Property="Shell.ShellForegroundColor" Value="White" />
-                <Setter Property="Shell.ShellTitleColor" Value="White" />
-                <Setter Property="Shell.ShellDisabledColor" Value="#B4FFFFFF" />
-                <Setter Property="Shell.ShellUnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.ShellTabBarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
-                <Setter Property="Shell.ShellTabBarForegroundColor" Value="White"/>
-                <Setter Property="Shell.ShellTabBarUnselectedColor" Value="#95FFFFFF"/>
-                <Setter Property="Shell.ShellTabBarTitleColor" Value="White"/>
-            </Style>
-            <Style TargetType="ShellItem" BasedOn="{StaticResource BaseStyle}" />
-        </ResourceDictionary>
-    </Shell.Resources>
-
     <!-- Your Pages -->
     <ShellItem>
-        <ShellSection Title="Record" Icon="tab_feed.png">
+        <ShellSection Title="Record" Icon="tab_feed.png" Route="recording">
             <ShellContent ContentTemplate="{DataTemplate local:RecordingPage}" />
         </ShellSection>
-        <ShellSection Title="About" Icon="tab_about.png">
+        <ShellSection Title="About" Icon="tab_about.png" Route="about">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
         </ShellSection>
     </ShellItem>
