Fix text alignment for counter

--- a/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
+++ b/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
@@ -45,6 +45,7 @@
                        VerticalOptions="Center"
                        FontSize="120"
                        FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"
                        IsVisible="{Binding Path=IsRecording}"
                        Text="{Binding Path=Counter}"
                        />
