--- a/src/StabilometricApp/StabilometricApp/AppShell.xaml
+++ b/src/StabilometricApp/StabilometricApp/AppShell.xaml
@@ -49,6 +49,9 @@
         <ShellSection Title="Record" Icon="tab_feed.png" Route="recording">
             <ShellContent ContentTemplate="{DataTemplate local:RecordingPage}" />
         </ShellSection>
+        <ShellSection Title="Data" Route="data">
+            <ShellContent ContentTemplate="{DataTemplate local:DataPage}" />
+        </ShellSection>
         <ShellSection Title="About" Icon="tab_about.png" Route="about">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
         </ShellSection>
