--- a/src/StabilometricApp/StabilometricApp/AppShell.xaml
+++ b/src/StabilometricApp/StabilometricApp/AppShell.xaml
@@ -52,6 +52,9 @@
         <ShellSection Title="Data" Route="data">
             <ShellContent ContentTemplate="{DataTemplate local:DataPage}" />
         </ShellSection>
+        <ShellSection Title="Settings" Route="settings">
+            <ShellContent ContentTemplate="{DataTemplate local:SettingsPage}" />
+        </ShellSection>
         <ShellSection Title="About" Icon="tab_about.png" Route="about">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
         </ShellSection>
