--- a/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
+++ b/src/StabilometricApp/StabilometricApp/Views/RecordingPage.xaml
@@ -79,20 +79,34 @@
                         />
             </StackLayout>
             <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                
                 <Button HorizontalOptions="Fill"
                         VerticalOptions="Fill"
+                        Grid.RowSpan="2"
                         Text="Record"
                         IsVisible="{Binding Path=IsRecording, Converter={StaticResource InvertBooleanConverter}}"
                         Command="{Binding Path=StartRecording}"
                         />
                 <Label HorizontalOptions="Fill"
                        VerticalOptions="Center"
+                       Grid.Row="0"
                        FontSize="120"
                        FontAttributes="Bold"
                        HorizontalTextAlignment="Center"
                        IsVisible="{Binding Path=IsRecording}"
                        Text="{Binding Path=Counter}"
                        />
+                <Button HorizontalOptions="Fill"
+                        VerticalOptions="Fill"
+                        Grid.Row="1"
+                        Text="Stop recording"
+                        IsVisible="{Binding Path=IsRecording}"
+                        Command="{Binding Path=StopRecording}"
+                        />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
